--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ cache:
 
 script:
   - npm run build
+  - travis setup releases
 
 
 deploy:
-  provider: releases
-  api_key: "fd0663dda3c262d0d511c213761897597267c406"
+  provider: releases 
   file: "README.md"
   skip_cleanup: true
   on:
